# Stockfish

./: .travis.yml  CMakeLists.txt  appveyor.yml
src/: Makefile  benchmark.cpp  bitbase.cpp  bitboard.cpp  bitboard.h  endgame.cpp  endgame.h  evaluate.cpp  evaluate.h  main.cpp  material.cpp  material.h  misc.cpp  misc.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  pawns.cpp  pawns.h  position.cpp  position.h  search.cpp  search.h  thread.cpp  thread.h  timeman.cpp  timeman.h  tt.cpp  tt.h  uci.cpp  uci.h  ucioption.cpp
src/nnue/: evaluate_nnue.cpp
src/syzygy/: tbprobe.cpp  tbprobe.h
tests/: instrumented.sh
